[package]
name = "mcosu-importer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.82"
blake3 = "1.5.4"
image = { version = "0.25.1", default-features = false, features = ["png", "jpeg"] }
notify = "6.1.1"
rfd = "0.14.1"
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"
slint = "1.5.1"
thiserror = "1.0.63"
reqwest = { version = "0.12.7", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
tracing-appender = "0.2.3"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
tempfile = "3.12.0"
once_cell = "1.19.0"
regex = "1.10.4"
directories = "5.0.1"
arboard = "3.4.0"
trash = "5.0.0"
rodio = { version = "0.19.0", default-features = false, features = ["mp3", "wav", "vorbis"] }
tiny_http = "0.12.0"
mime_guess = "2.0.5"
open = "5.3.2"
urlencoding = "2.1.3"

[build-dependencies]
slint-build = "1.5.1"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
panic = "abort"
